.opsera-healthcp-0212/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcp-0212
  labels:
    app: healthcp-0212
spec:
  selector:
    app: healthcp-0212
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
